WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141749
Purge PassRefPtr from CanvasRenderingContext2D.
https://bugs.webkit.org/show_bug.cgi?id=141749
Summary
Purge PassRefPtr from CanvasRenderingContext2D.
Andreas Kling
Reported
2015-02-18 01:16:22 PST
Let's get rid of PassRefPtr usage from CanvasRenderingContext2D.
Attachments
Patch
(14.95 KB, patch)
2015-02-18 01:33 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2015-02-18 01:33:00 PST
Created
attachment 246809
[details]
Patch
WebKit Commit Bot
Comment 2
2015-02-18 01:33:55 PST
Attachment 246809
[details]
did not pass style-queue: ERROR: Source/WebCore/html/canvas/CanvasRenderingContext2D.h:342: The parameter name "gradient" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Gyuyoung Kim
Comment 3
2015-02-18 03:51:22 PST
Comment on
attachment 246809
[details]
Patch LGTM
WebKit Commit Bot
Comment 4
2015-02-18 09:52:29 PST
Comment on
attachment 246809
[details]
Patch Clearing flags on attachment: 246809 Committed
r180268
: <
http://trac.webkit.org/changeset/180268
>
WebKit Commit Bot
Comment 5
2015-02-18 09:52:33 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug